Added activities section

--- a/Index.html
+++ b/Index.html
@@ -6,25 +6,49 @@
     <body>
         
         <!-- HERO SECTION -->
-        <div>
-            <h1>Visit Torshov</h1>
-            <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
+        <div class="hero-image">
+            <div id="hero-text">
+                <h2 id="city-name">Visit Córdoba</h2>
+                <h3 id="tag-line">Enjoy the culture and nature of this vibrant province.</h3>
+            </div>
         </div>
         
         <!-- ACTIVITIES SECTION -->
-        <div>
-            <h3>Top three activities to do at Torshov</h3>
-            <img src="images/park.jpg">
-            <img src="images/theatre.jpg">
-            <img src="images/sports.jpg">
+        <div class= "activities-section">
+            <div class="activities-title"> 
+                <h3 >Top three activities to do in Córdoba</h3>
+            </div> 
+            <div class="activities">
+                 <div >
+                     <img class="activity-image" src="images/vino.jpg">
+                     <h3 class="activity-title">Wine testing</h3>
+                     <p class="activity-description">Taste the variety of wine that Cordoba has to offer.</p>
+                </div>
+                 <div>
+                     <img class="activity-image" src="images/rios-cordoba.jpg">
+                     <h3 class="activity-title">Natural rives</h3>
+                     <p class="activity-description">Enjoy all of the crystal clear rivers hidding in between the mountains.</p>
+                </div>
+                 <div> 
+                    <img class="activity-image" src="images/sierras.jpg">
+                    <h3 class="activity-title">Trekking</h3>
+                    <p class="activity-description">Discover ancient history across the trekking trailers of the province.</p>
+                </div> 
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
+        <div class="card">
+            <div>
+              <img src="images/woman-photo.jpg" 
+                   alt="María Gonzales smiling"
+                   class="avatar"> 
+            </div>
+         <div>          
             <h3>Your guide</h3>
-            <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-            <h4>Per Harald Borgen</h4>
-            <img src="images/per.jpg">
+            <p class="italic">"I have lived in Córdoba for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
+            <h4>María Gonzales</h4>
+         </div>    
         </div>
     </body>
 </html>
