Added guide section

--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
                  <div >
                      <img class="activity-image" src="images/vino.jpg">
                      <h3 class="activity-title">Wine testing</h3>
-                     <p class="activity-description">Taste the variety of wine that Cordoba has to offer.</p>
+                     <p class="activity-description">Taste the widest variety of Malbec and argentinean stake in the best restaurants around town.</p>
                 </div>
                  <div>
                      <img class="activity-image" src="images/rios-cordoba.jpg">
